--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -117,6 +117,17 @@
   }
 }
 
+.form-group {
+  border: 1px solid #DDD;
+  padding: 5px 3px;
+  margin-top: 5px;
+  min-height: 20px;
+
+  .form-subsection-header {
+    margin: 0;
+  }
+}
+
 .form-subsection-action {
   float: right;
   text-decoration: underline;
