--- a/app/views/messages/edit.html.slim
+++ b/app/views/messages/edit.html.slim
@@ -1,3 +1,3 @@
 .form-container
-  h3.page-title New Message
+  h3.page-title Edit Message
   = render 'form', form_path: members_path, form_action: :post
