--- a/app/views/messages/index.html.slim
+++ b/app/views/messages/index.html.slim
@@ -2,3 +2,26 @@
   = link_to new_message_path, class: 'btn' do
     i.icon-plus
 h3.page-title Messages
+.metro-list
+  - @messages.each do |message|
+    .metro-list-item *{:class => [@color]}
+      .row-fluid
+        .pull-right.metro-list-item-attachments
+          = link_to message,
+            class: 'js', method: :delete, confirm: delete_warning do
+            i.icon-remove *{:class => ["#{@color}-secondary"]}
+        .span4.metro-list-item-title
+          i.icon-envelope
+          - if message.sent_at
+            = link_to message.display_name, message
+          - else
+            = link_to message.display_name, edit_message_path(message)
+        .span3.metro-list-item-info
+          .labeled-item.subdued
+            | Created
+            span= message.created_at.to_s(:short)
+          .labeled-item.subdued
+            | Sent
+            span
+              = message.sent_at ? message.sent_at.to_s(:short) : 'Never'
+
