--- a/app/assets/stylesheets/messages.css.scss
+++ b/app/assets/stylesheets/messages.css.scss
@@ -12,7 +12,7 @@
   color: rgb(37, 144, 199);
 }
 
-.attachments, .recepients {
+.attachments, .recipients {
   list-style: none;
   clear: both;
   margin: 0;
