--- a/app/views/messages/_form.html.slim
+++ b/app/views/messages/_form.html.slim
@@ -23,7 +23,7 @@
     = f.label :message_type, class: 'radio-label' do
       = f.radio_button :message_type, Message::SMS
       | SMS
-  = render 'recepients'
+  = render 'recipients'
   = render 'attachments'
   .form-subsection-block
   .form-subsection-header Subject
