--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -141,6 +141,21 @@
   }
 }
 
+.form-subsection-options {
+  list-style: none;
+  margin: 0;
+  float: right;
+}
+
+.form-subsection-option {
+  float: left;
+}
+
+.form-subsection-option a {
+  padding: 0 5px;
+  color: rgb(37, 144, 199);
+}
+
 .remove-form-item {
   float: right;
   color: red;
