--- a/app/views/messages/_attachments.html.slim
+++ b/app/views/messages/_attachments.html.slim
@@ -1,14 +1,14 @@
-.form-subsection-block
-  ul.attachment-options
-    li.attachment-option
+.form-subsection-block.attachments-section
+  ul.form-subsection-options
+    li.form-subsection-option
       = link_to  song_sets_path('attach-attachment-to-message' => @message.id) do
         i.icon-plus
         | Add Sets
-    li.attachment-option
+    li.form-subsection-option
       = link_to songs_path('attach-attachment-to-message' => @message.id) do
         i.icon-plus
         | Add Songs
-    li.attachment-option
+    li.form-subsection-option
       = link_to members_path('attach-attachment-to-message' => @message.id) do
         i.icon-plus
         | Add Members
