--- a/app/views/messages/_attachments.html.slim
+++ b/app/views/messages/_attachments.html.slim
@@ -16,7 +16,7 @@
   .form-group
     ul.attachments
       - @message.attachments.each do |attachment|
-        li
+        li.textbox-label
           .message-html= attachment.adapter.to_html
           i.icon-paper-clip
           = attachment.adapter.to_description
