--- a/app/views/members/index.html.slim
+++ b/app/views/members/index.html.slim
@@ -21,7 +21,7 @@
           .slide-text Create Member
     h3.page-title
       | Members
-      small#matching-count (#{@filter_form.results.count} matching)
+      small#matching-count [] (#{@filter_form.results.count} matching)
     .sort-options
       ul
         li Sort By:
