Fix user to use email as username

--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -6,8 +6,8 @@
          - @user.errors.full_messages.each do |message|
            li= message
   div.field
-    = f.label :username, 'Email'
-    = f.text_field :username
+    = f.label :email, 'Email'
+    = f.text_field :email
   div.field
     = f.label :password
     = f.password_field :password
